[tool.poetry]
name = "accountgeneratorhelper"
version = "0.1.0"
description = ""
authors = ["other_wolf <vpe304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
noble-tls = "^0.0.104"
cloudscraper = "^1.2.71"
pysocks = "^1.7.1"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.2.1"
requests = "^2.31.0"
idna = "^3.7"
charset-normalizer = "^3.3.2"
certifi = "^2024.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
