[tool.poetry]
name = "AccountGeneratorHelper"
version = "0.1.0"
description = "Library helpful when creating accounts."
authors = ["other_wolf <vpe304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
noble-tls = "^0.0.104"
cloudscraper = "^1.2.71"
pysocks = "^1.7.1"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.2.1"
requests = "^2.31.0"
idna = "^3.7"
charset-normalizer = "^3.3.2"
certifi = "^2024.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
